--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
-    "mongodb": "^3.1.1"
+    "mongodb": "^3.1.1",
+    "sanitizer": "^0.1.3"
   },
   "scripts": {
     "start": "node index.js"
